--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,12 @@
-# Exported from Render on 2024-10-26T05:23:23Z
+# Exported from Render on 2024-10-26T06:05:47Z
 services:
 - type: web
-  name: hello-world-1-4
-  runtime: docker
-  repo: https://github.com/wanaonimichael/hello-world-1
+  name: Wanaoni-foundation-
+  runtime: node
+  repo: https://github.com/wanaonimichael/Wanaoni-foundation-
   plan: free
   region: oregon
-  dockerContext: .
-  dockerfilePath: ./Dockerfile
-  previews:
-    generation: automatic
+  buildCommand: yarn
+  startCommand: yarn start
 version: "1"
 
